# citycompass

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  package-lock.json  requirements.txt
.github/workflows/: test.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
backend/app/: auth.py  create_tables.py  logger.py  logger.txt  main.py  model_loader.py
backend/app/agent/: __init__.py  agent.py  prompts.py  tools.py
backend/app/api/: acs.py  agent.py  auth.py  gemini_client.py  ml.py  survey.py
backend/app/core/: config.py  db.py  model_loader.py
backend/app/models/: models.py
backend/app/schemas/: __init__.py  agent.py  database.py  db.py  survey.py
backend/tests/: conftest.py  test_backend.py  test_backend.txt
citycompass/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  package-lock.json  package.json
citycompass/app/: globals.css  layout.tsx  page.tsx
citycompass/app/(protected)/: layout.tsx
citycompass/app/(public)/: layout.tsx  page.tsx
citycompass/app/components/: AddToCard.tsx  FeatureGrid.jsx  HomepageHeroSection.tsx  NavBar.tsx  PlatformImpact.jsx  PlatformImpact.tsx  ProductCard.tsx
citycompass/app/map/: page.tsx
citycompass/app/survey/: page.tsx
citycompass/app/users/: page.tsx
citycompass/components/: location-popup.tsx
citycompass/components/map/: map-marker.tsx  map-popup.tsx  map-search.tsx  map-styles.tsx
citycompass/components/ui/: command.tsx  navigation-menu.tsx  popover.tsx
citycompass/context/: map-context.ts
citycompass/lib/: schemas.ts
citycompass/lib/actions/: location.ts  survey.ts
citycompass/lib/contexts/: UserLocationContext.tsx
citycompass/lib/data/: nyc-locations.ts  nyc-zip-coordinates.json  nyc-zip-to-district.json
citycompass/lib/hooks/: useLocalStorage.ts
citycompass/lib/schemas/: survey.ts
citycompass/public/: nyc_community_districts.geojson
ml/: .gitignore  README.md
ml/artifacts/: nsqi_model.pkl
ml/data/interim/: 311_monthly_by_modzcta.csv  nypd_monthly_by_modzcta.csv
ml/data/processed/: quality_citywide_monthly_with_tplus6_and_drivers.csv
ml/data/raw/: BK01_NeighborhoodDataProfile.xlsx  BK02_NeighborhoodDataProfile.xlsx  BK03_NeighborhoodDataProfile.xlsx  (+56 more)
ml/notebooks/: furman.ipynb  furman_model.ipynb
ml/pipeline/: preprocess.py  train.py  utils.py
(+40 files in other folders)
