[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "Authlib==1.6.4",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "cryptography==46.0.1",
    "fastapi[standard]==0.116.2",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "psycopg2-binary==2.9.10",
    "pycparser==2.23",
    "pydantic==2.11.9",
    "pydantic-settings>=2.11.0",
    "pydantic_core==2.33.2",
    "python-dotenv==1.1.1",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.43",
    "starlette==0.48.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.15.0",
    "uvicorn==0.35.0",
    # --- Auth & Security ---
    "bcrypt==4.3.0",
    "passlib==1.7.4",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "ecdsa==0.19.1",
    "pyasn1==0.6.1",
    "rsa==4.9.1",
    "six==1.17.0",
    # --- Testing ---
    "pytest==8.4.2",
    "iniconfig==2.3.0",
    "pluggy==1.6.0",
    "Pygments==2.19.2",
    "packaging==25.0",
    # --- ML + Data Science ---
    "pandas==2.3.3",
    "numpy==2.3.4",
    "scikit-learn==1.7.2",
    "xgboost==3.1.1",
    "seaborn==0.13.2",
    "matplotlib==3.10.7",
    "joblib==1.5.2",
    "openpyxl==3.1.5",
    "et-xmlfile==2.0.0",
    # --- HTTP Client ---
    "requests>=2.31.0"
]
